--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-vite-template",
   "version": "1.0.0",
-  "description": "",
+  "description": "Simple vite starter template with pinia, axios, mqtt",
   "main": "index.js",
   "scripts": {
     "dev": "vite",
@@ -30,5 +30,13 @@
     "vite-plugin-pages": "^0.25.0",
     "vite-plugin-vue-layouts": "^0.7.0",
     "vite-plugin-windicss": "^1.8.7"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/saknarak/my-vite-template.git"
+  },
+  "bugs": {
+    "url": "https://github.com/saknarak/my-vite-template/issues"
+  },
+  "homepage": "https://github.com/saknarak/my-vite-template#readme"
 }
